# betaudit

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: keepalive.yml
app/: __init__.py  api_models.py  config.py  db.py  engine.py  main.py  mcp_server.py  models.py  redis_client.py  risk_factors.py  schemas.py  security.py  telegram.py
app/llm/: __init__.py  parser.py
app/payments/: __init__.py  facilitator.py  gate.py  x402.py
app/resolvers/: __init__.py  base.py  polymarket.py  router.py
app/services/: __init__.py  audit.py  cache_layer.py  keys.py  monitor.py  payments.py  ratelimit.py
examples/: verify_response.trap_market.json
tests/: conftest.py  test_cache_layer.py  test_engine.py  test_keys_audit.py  test_live_gamma.py  test_live_llm.py  test_llm_parser.py  test_mcp.py  test_monitor.py  test_polymarket_resolver.py  test_ratelimit.py  test_schema_contract.py  test_telegram.py  test_verify_endpoint.py  test_x402.py  test_x402_primitives.py
web/: index.html  package-lock.json  vite.config.ts
web/.figma/make/: site.json
web/public/docs/: index.html
web/public/privacy/: index.html
web/src/: App.tsx  api.ts  index.css
web/src/imports/pasted_text/: quantum-terminal-design.md
